# ServeStatic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.cfg  tox.ini  versions.json
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml  issue.yml
.github/workflows/: ci.yml  publish-develop-docs.yml  publish-py.yml  publish-release-docs.yml  test-docs.yml  test-src.yml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/asgi/: index.html
1.0.0/changelog/: index.html
1.0.0/django/: index.html
1.0.0/django-faq/: index.html
1.0.0/django-settings/: index.html
1.0.0/license/: index.html
1.0.0/quick-start/: index.html
1.0.0/search/: search_index.json
1.0.0/servestatic/: index.html
1.0.0/servestatic-asgi/: index.html
1.0.0/wsgi/: index.html
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/asgi/: index.html
1.1.0/changelog/: index.html
1.1.0/django/: index.html
1.1.0/django-faq/: index.html
1.1.0/django-settings/: index.html
1.1.0/license/: index.html
1.1.0/quick-start/: index.html
1.1.0/search/: search_index.json
1.1.0/servestatic/: index.html
1.1.0/servestatic-asgi/: index.html
1.1.0/wsgi/: index.html
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/asgi/: index.html
1.2.0/changelog/: index.html
1.2.0/django/: index.html
1.2.0/django-faq/: index.html
1.2.0/django-settings/: index.html
1.2.0/license/: index.html
1.2.0/quick-start/: index.html
1.2.0/servestatic/: index.html
1.2.0/servestatic-asgi/: index.html
1.2.0/wsgi/: index.html
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/asgi/: index.html
2.0.0/changelog/: index.html
2.0.0/django/: index.html
2.0.0/django-faq/: index.html
2.0.0/django-settings/: index.html
2.0.0/license/: index.html
2.0.0/quick-start/: index.html
2.0.0/servestatic/: index.html
2.0.0/servestatic-asgi/: index.html
2.0.0/wsgi/: index.html
2.0.1/: 404.html  index.html  sitemap.xml
2.0.1/asgi/: index.html
2.0.1/changelog/: index.html
2.0.1/django/: index.html
2.0.1/django-faq/: index.html
2.0.1/django-settings/: index.html
2.0.1/license/: index.html
2.0.1/quick-start/: index.html
2.0.1/search/: search_index.json
2.0.1/servestatic/: index.html
2.0.1/servestatic-asgi/: index.html
2.0.1/wsgi/: index.html
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/asgi/: index.html
2.1.0/changelog/: index.html
2.1.0/contributing/: index.html
2.1.0/django/: index.html
2.1.0/django-faq/: index.html
2.1.0/django-settings/: index.html
2.1.0/license/: index.html
2.1.0/quick-start/: index.html
2.1.0/search/: search_index.json
2.1.0/servestatic/: index.html
2.1.0/servestatic-asgi/: index.html
2.1.0/wsgi/: index.html
2.1.1/: 404.html  index.html  sitemap.xml
2.1.1/asgi/: index.html
2.1.1/changelog/: index.html
2.1.1/contributing/: index.html
2.1.1/django/: index.html
2.1.1/django-faq/: index.html
2.1.1/django-settings/: index.html
2.1.1/license/: index.html
2.1.1/quick-start/: index.html
2.1.1/search/: search_index.json
2.1.1/servestatic/: index.html
2.1.1/servestatic-asgi/: index.html
2.1.1/wsgi/: index.html
3.0.0/: 404.html  index.html  sitemap.xml
3.0.0/asgi/: index.html
3.0.0/changelog/: index.html
3.0.0/contributing/: index.html
3.0.0/django/: index.html
3.0.0/django-faq/: index.html
3.0.0/django-settings/: index.html
3.0.0/license/: index.html
3.0.0/quick-start/: index.html
3.0.0/search/: search_index.json
3.0.0/servestatic/: index.html
3.0.0/servestatic-asgi/: index.html
3.0.0/wsgi/: index.html
3.0.1/: 404.html  index.html  sitemap.xml
3.0.1/asgi/: index.html
3.0.1/changelog/: index.html
3.0.1/contributing/: index.html
3.0.1/django/: index.html
3.0.1/django-faq/: index.html
3.0.1/django-settings/: index.html
3.0.1/license/: index.html
3.0.1/quick-start/: index.html
3.0.1/servestatic/: index.html
3.0.1/servestatic-asgi/: index.html
3.0.1/wsgi/: index.html
3.0.2/: 404.html  index.html  sitemap.xml
3.0.2/asgi/: index.html
3.0.2/changelog/: index.html
3.0.2/contributing/: index.html
3.0.2/django/: index.html
3.0.2/django-faq/: index.html
3.0.2/django-settings/: index.html
3.0.2/license/: index.html
3.0.2/quick-start/: index.html
3.0.2/search/: search_index.json
3.0.2/servestatic/: index.html
3.0.2/servestatic-asgi/: index.html
3.0.2/wsgi/: index.html
3.1.0/: 404.html  dictionary.txt  index.html  sitemap.xml
3.1.0/asgi/: index.html
3.1.0/changelog/: index.html
3.1.0/contributing/: index.html
3.1.0/django/: index.html
3.1.0/django-faq/: index.html
3.1.0/django-settings/: index.html
3.1.0/license/: index.html
3.1.0/quick-start/: index.html
3.1.0/search/: search_index.json
3.1.0/servestatic/: index.html
3.1.0/servestatic-asgi/: index.html
3.1.0/wsgi/: index.html
4.0.0/: 404.html  index.html  sitemap.xml
4.0.0/asgi/: index.html
4.0.0/changelog/: index.html
4.0.0/cli/: index.html
4.0.0/contributing/: index.html
4.0.0/django/: index.html
4.0.0/django-faq/: index.html
4.0.0/django-settings/: index.html
4.0.0/license/: index.html
4.1.0/: 404.html  dictionary.txt  index.html  sitemap.xml
develop/: 404.html  index.html  sitemap.xml
docs/: changelog.rst  mkdocs.yml
docs/src/: asgi.md  (+13 more)
requirements/: build-src.txt  py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django51.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py312-django42.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt
scripts/: generate_default_media_types.py  security_probe.py  validate_changelog.py
tests/: conftest.py  django_settings.py  django_urls.py  middleware.py  test_asgi.py  test_cli.py  test_compress.py  test_django_servestatic.py  test_django_whitenoise.py  test_manifest_hash.py  test_media_types.py  test_runserver_nostatic.py  test_servestatic.py  test_storage.py  test_string_utils.py  test_whitenoise.py  utils.py
(+50 files in other folders)
